# ksecrets

./: .gitignore  CMakeLists.txt  README  README.md  ROADMAP  TODO  addcomputerdialog.h  addcomputerwidget.ui  collection.cpp  collection.h  computerdata.h  computersyncjob.cpp  computersyncjob.h  configconstants.h  configwidget.cpp  configwidget.h  configwidget.ui  importsinglewalletjob.cpp  importsinglewalletjob.h  item.cpp  item.h  kio_ksecretsservice.cpp  kio_ksecretsservice.h  ksecrets.desktop  ksecretsapp.cpp  ksecretsapp.h  ksecretsappjob.h  ksecretserviced.desktop  ksecretsserviced.desktop  ksecretsync.cpp  ksecretsync.h  ksecretsync.rc  ksecretsync.ui  kwlimporterjob.cpp  main.cpp  messages.sh  metainfo.yaml  org.kde.ksecretsserviced.service  peer.h  prompt.cpp  (+19 more)
autotests/api/: CMakeLists.txt  README.md  ksecretsservice-test.cpp  ksecretsservice-test.h
autotests/ksecrets_store/: CMakeLists.txt  crypt_buffer_test.cpp  crypt_buffer_test.h  ksecrets_file_test.cpp  ksecrets_file_test.h  ksecrets_store_test.cpp  ksecrets_store_test.h
backend/tests/: CMakeLists.txt  ksecrettest.cpp  ksecretuitest.cpp  securebuffertest.h  temporarytest.cpp
ksecretsservice/: CMakeLists.txt  dbusbackend.cpp  ksecretsservicecodec.cpp  ksecretsservicecollectionjobs.cpp  ksecretsservicecollectionjobs.h  ksecretsserviceitem.h
ksecretsservice/tests/: CMakeLists.txt
ksecretsserviced/: CMakeLists.txt  DESIGN  TODO  jobinfostructs.h  ksecretsserviced.desktop  main.cpp  org.kde.ksecretsserviced.service.in
ksecretsserviced/backend/: CMakeLists.txt  backendcollection.cpp  backendcollection.h  backendcollectionmanager.h  backenditem.h  backendjob.cpp  backendmaster.cpp  securebuffer.cpp  securebuffer.h  securebuffer_p.h
ksecretsserviced/backend/ksecret/: TODO  ksecretcollection.cpp  ksecretcollection.h  ksecretcollectionmanager.h  ksecretencryptionfilter.cpp  ksecretitem.cpp  ksecretitem.h  ksecretjobs.h  ksecretstream.cpp
ksecretsserviced/backend/temporary/: temporarycollection.cpp  temporaryitem.cpp  temporaryjobs.cpp  temporaryjobs.h
ksecretsserviced/backend/tests/: ksecretuitest.cpp  ksecretuitest.h  securebuffertest.cpp  temporarytest.h
ksecretsserviced/frontend/: CMakeLists.txt
ksecretsserviced/frontend/secret/: collection.cpp  collection.h  item.cpp  item.h  ksecretobject.h  prompt.cpp  prompt.h  service.cpp  service.h  session.h
ksecretsserviced/frontend/secret/adaptors/: collectionadaptor.h  daemonsecret.cpp  daemonsecret.h  dbustypes.cpp  itemadaptor.h  secretstruct.h  serviceadaptor.cpp  serviceadaptor.h  sessionadaptor.cpp  sessionadaptor.h
ksecretsserviced/frontend/tests/: CMakeLists.txt  servicetest.cpp  servicetest.h  tempblockingcollection.h  tempblockingcollectionmanager.cpp  tempblockingitem.cpp  tempblockingitem.h
ksecretsserviced/lib/: daemonjob.cpp
ksecretsserviced/ui/: CMakeLists.txt  abstractacljobs.cpp  abstractuijobs.cpp  abstractuijobs.h  dialogaskaclprefsjob.cpp  dialogaskaclprefsjob.h  dialogaskcreateaclprefs.ui  dialoguimanager.cpp  nouimanager.h
ksecretsserviced/ui/tests/: dialogaskaclprefstest.h  dialoguimanagertest.h  nouimanagertest.cpp
kwlimporter/: CMakeLists.txt  importsinglewalletjob.cpp  importsinglewalletjob.h  kwlimporterjob.cpp  kwlimporterjob.h
kwlimporter/kwalletbackend/: kwalletentry.cc
lib/: CMakeLists.txt  daemonjob.h  peer.cpp
secretsync/kcm/: CMakeLists.txt  addcomputerdialog.cpp  addcomputerwidget.ui  configwidget.cpp  configwidget.h  configwidget.ui  kcm_ksecretsync.desktop  kcsecretsyncmodule.cpp  ksecretsynccfg.kcfgc
src/api/ksecrets/: CMakeLists.txt  KF5SecretsConfig.cmake.in  Messages.sh  README  dbusbackend.cpp  dbusbackend.h  ksecretscollection.cpp  ksecretscollection.h  ksecretscollection_p.h  ksecretsglobals.h  ksecretsitem.cpp  ksecretsitem.h  ksecretsitem_p.h  ksecretsservice.cpp  ksecretsservice.h  ksecretsservice_p.h  ksecretsservicecodec.cpp  ksecretsservicecodec.h  ksecretsservicecollection.cpp  ksecretsservicecollection.h  ksecretsservicecollection_p.h  ksecretsservicecollectionjobs.cpp  ksecretsservicecollectionjobs.h  ksecretsservicecollectionjobs_p.h  ksecretsservicedbustypes.h  ksecretsserviceitem.h  ksecretsserviceitem_p.h  ksecretsserviceitemjobs.cpp  ksecretsserviceitemjobs.h  ksecretsserviceitemjobs_p.h  ksecretsservicemacros.h  ksecretsservicesecret.cpp  ksecretsservicesecret.h  ksecretsservicesecret_p.h  ksecretsvalue.cpp  ksecretsvalue.h  ksecretsvalue_p.h  org.freedesktop.Secret.Collection.xml  org.freedesktop.Secret.Item.xml  org.freedesktop.Secret.Prompt.xml  (+4 more)
src/api/ksecrets/fd.o/: CMakeLists.txt  dbusbackend.cpp  dbusbackend.h  ksecretscollectiondbus.cpp  promptjob.cpp  (+16 more)
src/runtime/ksecrets/: CMakeLists.txt  ksecrets.desktop  ksecretsapp.cpp  ksecretsapp.h  ksecretsappjob.cpp  ksecretsappjob.h  main.cpp
src/runtime/ksecrets-crypt/: CMakeLists.txt  config.cpp  ksecrets-crypt.c  ksecrets-crypt.h  passwords.c
src/runtime/ksecrets_backend/: CMakeLists.txt  ksecrets_backend.cpp  ksecrets_backend.h  ksecrets_backend_p.h  ksecrets_crypt.c
src/runtime/ksecrets_store/: CMakeLists.txt  crypt_buffer.cpp  crypt_buffer.h  crypting_engine.cpp  crypting_engine.h  defines.h  ksecrets_backend.cpp  ksecrets_backend.h  ksecrets_backend_p.h  ksecrets_credentials.c  ksecrets_credentials.cpp  ksecrets_credentials.h  ksecrets_crypt.cpp  ksecrets_crypt.h  ksecrets_data.cpp  ksecrets_data.h  ksecrets_device.h  ksecrets_file.cpp  ksecrets_file.h  ksecrets_store.cpp  ksecrets_store.h  ksecrets_store_p.h  pam_credentials.cpp
src/runtime/ksecretsserviced/: CMakeLists.txt  Messages.sh  acl.h  jobinfostructs.h  ksecretsserviced.desktop  main.cpp  peer.cpp  peer.h
src/runtime/pam-ksecrets/: CMakeLists.txt  pam_ksecrets.c
tests/: CMakeLists.txt  protocoltest.cpp  protocoltest.h  queuedjobtest.cpp  queuedjobtest.h  servicetest.cpp  servicetest.h  socketconnectiontest.h  sslconnectiontest.cpp  sslconnectiontest.h  tempblockingcollection.cpp  tempblockingcollection.h  tempblockingcollectionmanager.cpp  tempblockingcollectionmanager.h  tempblockingitem.cpp  tempblockingitem.h  tempblockingjobs.cpp  tempblockingjobs.h
(+311 files in other folders)
