#INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR})

SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES (
   ${KDE4_INCLUDES}
   ${QCA2_INCLUDE_DIR}
   ${CMAKE_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
)

KDE4_ADD_EXECUTABLE (ksecretsync_test 
    sslconnectiontest.cpp
)

TARGET_LINK_LIBRARIES (ksecretsync_test
    ${QT_QTTEST_LIBRARIES}
    ${QT_QTNETWORK_LIBRARIES}
    ${KDE4_KDEUI_LIBS}
)

ADD_TEST (KSecretSyncTest ksecretsync_test)
